# clash

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  deny.toml  install.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  test-install.yml
demos/scripts/: clash-check-hook-demo.tape  clash-status-demo.tape  clash-status-json-demo.tape  clash-watch-realtime-demo.tape  clash-watch-simple-demo.tape  claude-using-clash-demo.tape  multi-agent-clash-demo.tape
plugins/clash/.claude-plugin/: plugin.json
plugins/clash/hooks/: hooks.json
src/: check.rs  lib.rs  main.rs  status.rs  watch.rs  worktree.rs
src/watch/: app.rs  state.rs  ui.rs  watcher.rs
src/worktree/: conflict.rs  error.rs  manager.rs
